Fixed inability to close filters on mobile view when ElasticSuite is used

--- a/web/css/layout/_layered-navigation.less
+++ b/web/css/layout/_layered-navigation.less
@@ -9,7 +9,7 @@
                 .breeze-slideout-close();
             }
         }
-        .filter-title::after {
+        .filter-title strong::after {
             .breeze-slideout-overlay();
             .active& {
                 .breeze-slideout-overlay-visible();
